<resources>
    <string name="app_name">BabyMonitorApp</string>
    <string name="nutrition_result">
        Age Group: %1$s\nCalories: %2$s\nNotes: %3$s\nSuggested Meals:\n%4$s
    </string>
    <string name="height_hint">Height (cm)</string>
    <string name="weight_hint">Weight (kg)</string>
    <string name="age_hint">Age (months)</string>
    <string name="get_nutrition_plan">Get Nutrition Plan</string>
    <string name="video_thumbnail">Video thumbnail</string>
    <string name="error_loading_playlist">Error loading playlist.</string>
    <string name="calendar">Calendar</string>
    <string name="reminders">Reminders</string>
    <string name="enter_location">Enter location</string>
    <string name="search">Search</string>
    <string name="calendar1">Calendar1</string>
    <string name="sign_in">Sign in</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="good_morning">Good Morning!</string>
    <string name="right_icon">Right Icon</string>
    <string name="notifications">Notifications</string>
    <string name="_3">3</string>
    <string name="search1">Search1</string>
    <string name="nutrition_tracker">Nutrition Tracker</string>
    <string name="enter_baby_age">Enter Baby Age</string>
    <string name="enter_baby_weight">Enter Baby Weight</string>
    <string name="enter_baby_height">Enter Baby Height</string>
    <string name="register1">Register1</string>
    <string name="please_register">Please register</string>
    <string name="name">Name</string>
    <string name="username1">Username1</string>
    <string name="password1">Password1</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="register2">REGISTER2</string>
    <string name="or1">or1</string>
    <string name="login1">LOGIN1</string>
    <string name="result_will_appear_here">Result will appear here</string>
    <string name="settings">Settings</string>
    <string name="account_details">Account Details</string>
    <string name="edit_account">Edit Account</string>
    <string name="change_theme">Change Theme</string>
    <string name="logout">Logout</string>
    <string name="please_enter_your_current_password">Please enter your current password</string>
    <string name="current_password">Current Password</string>
    <string name="name1">Name1</string>
    <string name="username2">Username2</string>
    <string name="password2">Password2</string>
    <string name="phone_number1">Phone Number1\n</string>
    <string name="card_title">Card Title</string>
    <string name="_5_10">5/10</string>
    <string name="location_name">Location Name</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="community">Community</string>
    <string name="notifications1">Notifications1</string>
</resources>
